--- a/content/publication/monasterio-astobiza-permisibilidad-2019/cite.bib
+++ b/content/publication/monasterio-astobiza-permisibilidad-2019/cite.bib
@@ -15,3 +15,19 @@
  year = {2019}
 }
 
+@article{monasterio_astobiza_et al._Bringing inclusivity to robotics_2019,
+ abstract = {Advances in robotics and digital transformation currently make it possible to move robotic systems beyond the factory assembly line into private and institutional spaces such as our homes, schools and hospitals. In these places, robotics can facilitate human–machine cooperation and achieve what would not be possible for a human being or a machine separately.},
+ author = {Monasterio Astobiza, Aníbal; Toboso, Mario; Aparicio, Manuel; Ausín, Txetxu; López, Daniel; Morte, Ricardo; Pons, José},
+ doi = {https://doi.org/10.1038/s42256-019-0040-5},
+ file = {Texto completo:files/15/Monasterio Astobiza - 2019 - La permisibilidad ética de las tecnologías de biom.pdf:application/pdf},
+ issn = {2522-5839},
+ journal = {Nature Machine Intelligence},
+ month = {April},
+ number = {164},
+ pages = {},
+ title = {Bringing inclusivity to robotics with INBOTS},
+ url = {https://www.nature.com/articles/s42256-019-0040-5},
+ urldate = {2020-11-07},
+ volume = {1},
+ year = {2019}
+}
